about brings up new activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.NUMAD23Sp_YingjieHuang"
         tools:targetApi="31">
         <activity
+            android:name=".AboutActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -26,8 +33,11 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".DetailActivity">
-        </activity>
+            android:name=".DetailActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".LinksActivity"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
