--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,15 @@
         android:theme="@style/Theme.NUMAD23Sp_YingjieHuang"
         tools:targetApi="31">
         <activity
-            android:name=".AboutActivity"
+            android:name=".PrimeActivity"
             android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
+        <activity
+            android:name=".AboutActivity"
+            android:exported="false"></activity>
         <activity
             android:name=".DetailActivity"
             android:exported="false" />
