location activity created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         android:theme="@style/Theme.NUMAD23Sp_YingjieHuang"
         tools:targetApi="31">
         <activity
+            android:name=".LocationActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".PrimeActivity"
             android:exported="false">
             <meta-data
@@ -22,7 +29,7 @@
         </activity>
         <activity
             android:name=".AboutActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".DetailActivity"
             android:exported="false" />
