--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
         <activity
             android:name=".LocationActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
